# plex-code

ccos_clone/: README.md  pyproject.toml  setup.py
ccos_clone/claude_code/: __init__.py  cli.py
ccos_clone/claude_code/agents/: perplexity.py
ccos_clone/claude_code/core/: context.py
ccos_clone/claude_code/ui/: terminal.py
ccos_clone/claude_code/utils/: config.py
ccos_clone/src/: index.js
ccos_clone/src/commands/: analyze.js  handler.js  help.js  navigate.js  search.js
ccos_clone/src/ui/: welcome.js
