[tool.poetry]
name = "ccos"
version = "0.1.0"
description = "An open-source alternative to Claude Code using Perplexity AI models"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
rich = "^13.7.0"
httpx = "^0.26.0"
pydantic = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ccos = "claude_code.cli:app" 